--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Nur Muhammad",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-validator": "^6.10.0",
@@ -23,7 +23,7 @@
     "pg": "^8.5.1",
     "qrcode": "^1.4.4",
     "socket.io": "2.3.0",
-    "whatsapp-web.js": "^1.12.5"
+    "whatsapp-web.js": "latest"
   },
   "engines": {
     "node": "v12.10.0"
